# sidra_client

./: .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  client.config  cpu_log.py  extension_config.cmake  flush.py  plot.R  refresh_plot.R  requirements.txt  tables.sql  test_centralized.py  test_common.py  test_decentralized.py  test_parameters.py
.github/workflows/: MainDistributionPipeline.yml
ansible_scripts/: instructions.txt  inventory.tfvars  main.tf  playbook.yml  terraform-inventory.py
results/: buffer_size.csv  completeness.csv  cpu_centralized_10.csv  cpu_centralized_100.csv  cpu_decentralized.csv  cpu_decentralized_small.csv  refresh_1.csv  refresh_2.csv  refresh_4.csv  refresh_6.csv  results_centralized_10.csv  results_centralized_100.csv  results_decentralized.csv  results_decentralized_small.csv  window_1.csv  window_2.csv  window_4.csv  window_6.csv
sql_scripts/: cleanup.sql  create_tables_client.sql  create_tables_compiled_centralized_server.sql  create_tables_compiled_decentralized_server.sql  ivm_compiled_queries_client.sql  ivm_system_tables_client.sql  ivm_upsert_queries_client.sql  sidra_staging_view_activity_sessions_flush.sql  sidra_staging_view_daily_steps_user_flush.sql  sidra_staging_view_daily_steps_user_min_agg_flush.sql
src/common/: common.cpp
src/core/: client_extension.cpp  client_functions.cpp
src/include/: debug.hpp  sidra_client_extension.hpp
src/include/common/: common.hpp
src/include/core/: client_functions.hpp
src/include/network/: network.hpp
src/network/: network.cpp
